Tue Jul 14 16:10:17 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * tests/DCPS/Priority/run_test.pl:
        * tests/DCPS/Priority/services.conf:

	  Renamed svc.conf to avoid picking it up by default.  This was
	  an issue for executing with static builds.

        * tests/DCPS/Priority/svc.conf:

          Removed this file.

Mon Jul 13 20:41:41 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/WriteDataContainer.cpp:

          Made empty_condition_ wait after holding the lock. This fixed
          the deadlock during shutdown shown in a windows build.

Fri Jul 10 22:09:52 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/Thrasher/Subscriber.cpp:
        * tests/DCPS/Thrasher/run_test.pl:

          Subscriber now knows how many writers to expect and won't shut down
          until that many writers have been seen in SubscriptionMatchStatus.

Fri Jul 10 21:14:42 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:

          Use the byte order from the sample header, not the setting
          from the publisher's configuration.

Fri Jul 10 20:47:35 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepo.cpp:

          Re-ordered the headers and removed an unneeded one.

Fri Jul 10 19:28:49 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * tests/DCPS/Priority/Publisher.cpp:

          Added calls to wait_for_acknowledgements() after sending all
          data in order to allow the subscriber to receive the data
          before tearing down the connection.

Fri Jul 10 17:25:31 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataSampleHeader.cpp:

          Changed the pre-parsing of the header to not user the Serializer,
          it's too hard to reset the rd_ptrs if we need to go to the
          continuation block.  Now just manually read the first two bytes and
          leave the rd_ptrs where they are.
